--- a/index.ipynb
+++ b/index.ipynb
@@ -45,7 +45,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "import pandas as pd\n",
+    "df=pd\n",
     "\n",
     "# Your code here"
    ]
