--- a/index.ipynb
+++ b/index.ipynb
@@ -46,7 +46,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df=pd.DataFrame\n",
+    "df=pd.read_csv('Data')\n",
     "\n",
     "# Your code here"
    ]
