Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -74,6 +74,23 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CONTRIBUTING.md  index.ipynb  lego_sets.csv  LICENSE.md  README.md\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = None"
