Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -502,7 +502,7 @@
     }
    ],
    "source": [
-    "df.median['play_star_rating']# Your code here"
+    "df.me['play_star_rating']# Your code here"
    ]
   },
   {
