--- a/index.ipynb
+++ b/index.ipynb
@@ -486,23 +486,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'method' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-d7ff93741fe6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmedian\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'play_star_rating'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;31m# Your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: 'method' object is not subscriptable"
-     ]
+     "data": {
+      "text/plain": [
+       "<bound method Series.median of 0        4.0\n",
+       "1        4.0\n",
+       "2        4.3\n",
+       "3        3.6\n",
+       "4        3.2\n",
+       "5        3.7\n",
+       "6        3.7\n",
+       "7        4.4\n",
+       "8        3.6\n",
+       "9        3.6\n",
+       "10       4.1\n",
+       "11       3.2\n",
+       "12       4.2\n",
+       "13       3.8\n",
+       "14       4.7\n",
+       "15       3.0\n",
+       "16       5.0\n",
+       "17       2.0\n",
+       "18       2.0\n",
+       "19       4.0\n",
+       "20       3.0\n",
+       "21       5.0\n",
+       "22       NaN\n",
+       "23       3.0\n",
+       "24       3.2\n",
+       "25       4.6\n",
+       "26       2.7\n",
+       "27       4.3\n",
+       "28       4.5\n",
+       "29       1.0\n",
+       "        ... \n",
+       "12231    3.6\n",
+       "12232    4.9\n",
+       "12233    4.5\n",
+       "12234    4.2\n",
+       "12235    4.0\n",
+       "12236    4.1\n",
+       "12237    4.1\n",
+       "12238    4.0\n",
+       "12239    4.5\n",
+       "12240    4.3\n",
+       "12241    4.4\n",
+       "12242    4.8\n",
+       "12243    4.7\n",
+       "12244    4.5\n",
+       "12245    4.6\n",
+       "12246    4.7\n",
+       "12247    4.8\n",
+       "12248    3.6\n",
+       "12249    4.7\n",
+       "12250    4.3\n",
+       "12251    4.7\n",
+       "12252    4.6\n",
+       "12253    4.6\n",
+       "12254    3.5\n",
+       "12255    4.2\n",
+       "12256    4.4\n",
+       "12257    4.1\n",
+       "12258    4.6\n",
+       "12259    5.0\n",
+       "12260    4.5\n",
+       "Name: play_star_rating, Length: 12261, dtype: float64>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.me['play_star_rating']# Your code here"
+    "df['play_star_rating'].median# Your code here"
    ]
   },
   {
