Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -517,7 +517,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "df['play_star_rating'].c# Your code here"
    ]
   },
   {
