Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -513,11 +513,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10486"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df['play_star_rating'].c# Your code here"
+    "df['play_star_rating'].count()# Your code here"
    ]
   },
   {
