Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -540,11 +540,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6520510342493991"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "d# Your code here"
+    "df['play_star_rating'].std()# Your code here"
    ]
   },
   {
