Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -540,22 +540,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6520510342493991"
+       "91.9804293059243"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['play_star_rating'].std()# Your code here"
+    "df['list_price'].std()# Your code here"
    ]
   },
   {
