--- a/index.ipynb
+++ b/index.ipynb
@@ -41,182 +41,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ages</th>\n",
-       "      <th>list_price</th>\n",
-       "      <th>num_reviews</th>\n",
-       "      <th>piece_count</th>\n",
-       "      <th>play_star_rating</th>\n",
-       "      <th>prod_desc</th>\n",
-       "      <th>prod_id</th>\n",
-       "      <th>prod_long_desc</th>\n",
-       "      <th>review_difficulty</th>\n",
-       "      <th>set_name</th>\n",
-       "      <th>star_rating</th>\n",
-       "      <th>theme_name</th>\n",
-       "      <th>val_star_rating</th>\n",
-       "      <th>country</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>12256</th>\n",
-       "      <td>7-14</td>\n",
-       "      <td>36.5878</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>341.0</td>\n",
-       "      <td>4.4</td>\n",
-       "      <td>Protect NINJAGO® City from flying Manta Ray Bo...</td>\n",
-       "      <td>70609.0</td>\n",
-       "      <td>Help Cole save Shen-Li in this cool THE LEGO® ...</td>\n",
-       "      <td>Easy</td>\n",
-       "      <td>Manta Ray Bomber</td>\n",
-       "      <td>4.3</td>\n",
-       "      <td>THE LEGO® NINJAGO® MOVIE™</td>\n",
-       "      <td>4.2</td>\n",
-       "      <td>PT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12257</th>\n",
-       "      <td>7-14</td>\n",
-       "      <td>24.3878</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>217.0</td>\n",
-       "      <td>4.1</td>\n",
-       "      <td>Stop a Piranha Attack with Kai and Misako!</td>\n",
-       "      <td>70629.0</td>\n",
-       "      <td>Play out an action-packed Piranha Mech pursuit...</td>\n",
-       "      <td>Easy</td>\n",
-       "      <td>Piranha Attack</td>\n",
-       "      <td>3.6</td>\n",
-       "      <td>THE LEGO® NINJAGO® MOVIE™</td>\n",
-       "      <td>4.1</td>\n",
-       "      <td>PT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12258</th>\n",
-       "      <td>7-14</td>\n",
-       "      <td>24.3878</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>233.0</td>\n",
-       "      <td>4.6</td>\n",
-       "      <td>Stop a crime in the NINJAGO® City street market!</td>\n",
-       "      <td>70607.0</td>\n",
-       "      <td>Team up with Lloyd Garmadon, Nya and Officer T...</td>\n",
-       "      <td>Easy</td>\n",
-       "      <td>NINJAGO® City Chase</td>\n",
-       "      <td>4.6</td>\n",
-       "      <td>THE LEGO® NINJAGO® MOVIE™</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>PT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12259</th>\n",
-       "      <td>6-14</td>\n",
-       "      <td>12.1878</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>48.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>Achieve Spinjitzu greatness with the Green Ninja!</td>\n",
-       "      <td>70628.0</td>\n",
-       "      <td>Learn all the skills of Spinjitzu with THE LEG...</td>\n",
-       "      <td>Very Easy</td>\n",
-       "      <td>Lloyd - Spinjitzu Master</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>THE LEGO® NINJAGO® MOVIE™</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>PT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12260</th>\n",
-       "      <td>6-14</td>\n",
-       "      <td>12.1878</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>109.0</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>Practice your Spinjitzu skills with Kai and Zane!</td>\n",
-       "      <td>70606.0</td>\n",
-       "      <td>Join the ninja heroes at the dojo with this ac...</td>\n",
-       "      <td>Easy</td>\n",
-       "      <td>Spinjitzu Training</td>\n",
-       "      <td>4.7</td>\n",
-       "      <td>THE LEGO® NINJAGO® MOVIE™</td>\n",
-       "      <td>4.8</td>\n",
-       "      <td>PT</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       ages  list_price  num_reviews  piece_count  play_star_rating  \\\n",
-       "12256  7-14     36.5878          6.0        341.0               4.4   \n",
-       "12257  7-14     24.3878          8.0        217.0               4.1   \n",
-       "12258  7-14     24.3878         18.0        233.0               4.6   \n",
-       "12259  6-14     12.1878          1.0         48.0               5.0   \n",
-       "12260  6-14     12.1878         11.0        109.0               4.5   \n",
-       "\n",
-       "                                               prod_desc  prod_id  \\\n",
-       "12256  Protect NINJAGO® City from flying Manta Ray Bo...  70609.0   \n",
-       "12257         Stop a Piranha Attack with Kai and Misako!  70629.0   \n",
-       "12258   Stop a crime in the NINJAGO® City street market!  70607.0   \n",
-       "12259  Achieve Spinjitzu greatness with the Green Ninja!  70628.0   \n",
-       "12260  Practice your Spinjitzu skills with Kai and Zane!  70606.0   \n",
-       "\n",
-       "                                          prod_long_desc review_difficulty  \\\n",
-       "12256  Help Cole save Shen-Li in this cool THE LEGO® ...              Easy   \n",
-       "12257  Play out an action-packed Piranha Mech pursuit...              Easy   \n",
-       "12258  Team up with Lloyd Garmadon, Nya and Officer T...              Easy   \n",
-       "12259  Learn all the skills of Spinjitzu with THE LEG...         Very Easy   \n",
-       "12260  Join the ninja heroes at the dojo with this ac...              Easy   \n",
-       "\n",
-       "                       set_name  star_rating                 theme_name  \\\n",
-       "12256          Manta Ray Bomber          4.3  THE LEGO® NINJAGO® MOVIE™   \n",
-       "12257            Piranha Attack          3.6  THE LEGO® NINJAGO® MOVIE™   \n",
-       "12258       NINJAGO® City Chase          4.6  THE LEGO® NINJAGO® MOVIE™   \n",
-       "12259  Lloyd - Spinjitzu Master          5.0  THE LEGO® NINJAGO® MOVIE™   \n",
-       "12260        Spinjitzu Training          4.7  THE LEGO® NINJAGO® MOVIE™   \n",
-       "\n",
-       "       val_star_rating country  \n",
-       "12256              4.2      PT  \n",
-       "12257              4.1      PT  \n",
-       "12258              4.5      PT  \n",
-       "12259              5.0      PT  \n",
-       "12260              4.8      PT  "
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'sortby'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-21-a3fe3140e6ff>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'lego_sets.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msortby\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'list_price'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtail\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;31m# Your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/envs/learn-env/lib/python3.6/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   4374\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4375\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4376\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4377\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4378\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'sortby'"
+     ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "df=pd.read_csv('lego_sets.csv')\n",
-    "df.arrageby['list_price'.tail()\n",
+    "df.groupedby['list_price'].tail()\n",
     "# Your code here"
    ]
   },
