Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -60,7 +60,7 @@
    "source": [
     "import pandas as pd\n",
     "df=pd.read_csv('lego_sets.csv')\n",
-    "df.groupedby(by=['list_price']).tail()\n",
+    "df.groupedby(by['list_price']).tail()\n",
     "# Your code here"
    ]
   },
