Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -747,11 +747,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "741"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df['set_name']\n",
+    "len(df['set_name'].unique())\n",
     "# Your code here"
    ]
   },
