Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -763,7 +763,7 @@
    ],
    "source": [
     "len(df['set_name'].unique())\n",
-    "newdf=\n",
+    "newdf=[d]\n",
     "# Your code here"
    ]
   },
