Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1091,11 +1091,358 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Bird Island Egg Heist</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Piggy Plane Attack</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Piggy Car Escape</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>United States Capitol Building</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Solomon R. Guggenheim Museum®</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Shanghai</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>New York City</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Buckingham Palace</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>London</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Chicago</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Arc de Triomphe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>The Eiffel Tower</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Sydney</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>BOOST Creative Toolbox</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Go Brick Me</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Owen &amp; Blue</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Mr. Incredible &amp; Frozone</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Chewbacca™</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Han Solo™</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Iron Man MK50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Thanos</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Star-Lord</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Gamora</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Finn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Valentine's Bee</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Wonder Woman™</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>The Flash™</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Kylo Ren™</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>Rey</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>Aquaman™</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>711</th>\n",
+       "      <td>Catwoman™ Catcycle Chase</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>712</th>\n",
+       "      <td>Creative Box</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>713</th>\n",
+       "      <td>Creative Builder Box</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>714</th>\n",
+       "      <td>Bricks on a Roll</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>715</th>\n",
+       "      <td>Vacation Getaways</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>716</th>\n",
+       "      <td>Winter Toy Shop</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>717</th>\n",
+       "      <td>The Ghostbusters™ Level Pack</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>718</th>\n",
+       "      <td>Adventure Time™ Level Pack</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>719</th>\n",
+       "      <td>Harry Potter™ Team Pack</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>720</th>\n",
+       "      <td>Adventure Time™ Team Pack</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>721</th>\n",
+       "      <td>Excalibur Batman™ Fun Pack</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>722</th>\n",
+       "      <td>A-Team™ Fun Pack</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>723</th>\n",
+       "      <td>Sensei Wu Fun Pack</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>724</th>\n",
+       "      <td>Bane™ Fun Pack</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>725</th>\n",
+       "      <td>Knight Rider™ Fun Pack</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>726</th>\n",
+       "      <td>LEGO® DUPLO® Creative Box</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>727</th>\n",
+       "      <td>My First Bricks</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>728</th>\n",
+       "      <td>Green LEGO® DUPLO® Baseplate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>729</th>\n",
+       "      <td>Touch Sensor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>730</th>\n",
+       "      <td>Temple of Airjitzu</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>731</th>\n",
+       "      <td>A-Wing Starfighter™</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>732</th>\n",
+       "      <td>Power Functions Motor Set</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>733</th>\n",
+       "      <td>Starter Pack PLAYSTATION® 4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>734</th>\n",
+       "      <td>Zane Fun Pack</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>735</th>\n",
+       "      <td>Portal® 2 Level Pack</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>736</th>\n",
+       "      <td>Wicked Witch™ Fun Pack</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>737</th>\n",
+       "      <td>Vaiana's Ocean Voyage</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>738</th>\n",
+       "      <td>Slave I™</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>739</th>\n",
+       "      <td>Moana's Ocean Voyage</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>740</th>\n",
+       "      <td>My First Vehicles</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>741 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  0\n",
+       "0             Bird Island Egg Heist\n",
+       "1                Piggy Plane Attack\n",
+       "2                  Piggy Car Escape\n",
+       "3    United States Capitol Building\n",
+       "4     Solomon R. Guggenheim Museum®\n",
+       "5                          Shanghai\n",
+       "6                     New York City\n",
+       "7                 Buckingham Palace\n",
+       "8                            London\n",
+       "9                           Chicago\n",
+       "10                  Arc de Triomphe\n",
+       "11                 The Eiffel Tower\n",
+       "12                           Sydney\n",
+       "13           BOOST Creative Toolbox\n",
+       "14                      Go Brick Me\n",
+       "15                      Owen & Blue\n",
+       "16         Mr. Incredible & Frozone\n",
+       "17                       Chewbacca™\n",
+       "18                        Han Solo™\n",
+       "19                    Iron Man MK50\n",
+       "20                           Thanos\n",
+       "21                        Star-Lord\n",
+       "22                           Gamora\n",
+       "23                             Finn\n",
+       "24                  Valentine's Bee\n",
+       "25                    Wonder Woman™\n",
+       "26                       The Flash™\n",
+       "27                        Kylo Ren™\n",
+       "28                              Rey\n",
+       "29                         Aquaman™\n",
+       "..                              ...\n",
+       "711        Catwoman™ Catcycle Chase\n",
+       "712                    Creative Box\n",
+       "713            Creative Builder Box\n",
+       "714                Bricks on a Roll\n",
+       "715               Vacation Getaways\n",
+       "716                 Winter Toy Shop\n",
+       "717    The Ghostbusters™ Level Pack\n",
+       "718      Adventure Time™ Level Pack\n",
+       "719         Harry Potter™ Team Pack\n",
+       "720       Adventure Time™ Team Pack\n",
+       "721      Excalibur Batman™ Fun Pack\n",
+       "722                A-Team™ Fun Pack\n",
+       "723              Sensei Wu Fun Pack\n",
+       "724                  Bane™ Fun Pack\n",
+       "725          Knight Rider™ Fun Pack\n",
+       "726       LEGO® DUPLO® Creative Box\n",
+       "727                 My First Bricks\n",
+       "728    Green LEGO® DUPLO® Baseplate\n",
+       "729                    Touch Sensor\n",
+       "730              Temple of Airjitzu\n",
+       "731             A-Wing Starfighter™\n",
+       "732       Power Functions Motor Set\n",
+       "733     Starter Pack PLAYSTATION® 4\n",
+       "734                   Zane Fun Pack\n",
+       "735            Portal® 2 Level Pack\n",
+       "736          Wicked Witch™ Fun Pack\n",
+       "737           Vaiana's Ocean Voyage\n",
+       "738                        Slave I™\n",
+       "739            Moana's Ocean Voyage\n",
+       "740               My First Vehicles\n",
+       "\n",
+       "[741 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "newdf="
+    "newdf=pd.DataFrame(series)\n",
+    "newdf[]"
    ]
   },
   {
