--- a/index.ipynb
+++ b/index.ipynb
@@ -1091,413 +1091,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>piece_count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Bird Island Egg Heist</td>\n",
-       "      <td>277.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Piggy Plane Attack</td>\n",
-       "      <td>168.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Piggy Car Escape</td>\n",
-       "      <td>74.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>United States Capitol Building</td>\n",
-       "      <td>1032.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Solomon R. Guggenheim Museum®</td>\n",
-       "      <td>744.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Shanghai</td>\n",
-       "      <td>597.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>New York City</td>\n",
-       "      <td>598.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Buckingham Palace</td>\n",
-       "      <td>780.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>London</td>\n",
-       "      <td>468.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Chicago</td>\n",
-       "      <td>444.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Arc de Triomphe</td>\n",
-       "      <td>386.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>The Eiffel Tower</td>\n",
-       "      <td>321.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Sydney</td>\n",
-       "      <td>361.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>BOOST Creative Toolbox</td>\n",
-       "      <td>847.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Go Brick Me</td>\n",
-       "      <td>708.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Owen &amp; Blue</td>\n",
-       "      <td>234.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>Mr. Incredible &amp; Frozone</td>\n",
-       "      <td>160.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Chewbacca™</td>\n",
-       "      <td>149.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Han Solo™</td>\n",
-       "      <td>141.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>Iron Man MK50</td>\n",
-       "      <td>101.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Thanos</td>\n",
-       "      <td>105.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Star-Lord</td>\n",
-       "      <td>113.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>Gamora</td>\n",
-       "      <td>136.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>Finn</td>\n",
-       "      <td>91.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>Valentine's Bee</td>\n",
-       "      <td>140.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>Wonder Woman™</td>\n",
-       "      <td>143.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>The Flash™</td>\n",
-       "      <td>122.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>Kylo Ren™</td>\n",
-       "      <td>130.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>Rey</td>\n",
-       "      <td>119.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>Aquaman™</td>\n",
-       "      <td>135.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>711</th>\n",
-       "      <td>Catwoman™ Catcycle Chase</td>\n",
-       "      <td>83.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>712</th>\n",
-       "      <td>Creative Box</td>\n",
-       "      <td>106.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>713</th>\n",
-       "      <td>Creative Builder Box</td>\n",
-       "      <td>193.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>714</th>\n",
-       "      <td>Bricks on a Roll</td>\n",
-       "      <td>89.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>715</th>\n",
-       "      <td>Vacation Getaways</td>\n",
-       "      <td>98.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>716</th>\n",
-       "      <td>Winter Toy Shop</td>\n",
-       "      <td>85.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>717</th>\n",
-       "      <td>The Ghostbusters™ Level Pack</td>\n",
-       "      <td>81.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>718</th>\n",
-       "      <td>Adventure Time™ Level Pack</td>\n",
-       "      <td>120.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>719</th>\n",
-       "      <td>Harry Potter™ Team Pack</td>\n",
-       "      <td>112.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>720</th>\n",
-       "      <td>Adventure Time™ Team Pack</td>\n",
-       "      <td>88.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>721</th>\n",
-       "      <td>Excalibur Batman™ Fun Pack</td>\n",
-       "      <td>127.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>722</th>\n",
-       "      <td>A-Team™ Fun Pack</td>\n",
-       "      <td>90.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>723</th>\n",
-       "      <td>Sensei Wu Fun Pack</td>\n",
-       "      <td>87.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>724</th>\n",
-       "      <td>Bane™ Fun Pack</td>\n",
-       "      <td>93.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>725</th>\n",
-       "      <td>Knight Rider™ Fun Pack</td>\n",
-       "      <td>78.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>726</th>\n",
-       "      <td>LEGO® DUPLO® Creative Box</td>\n",
-       "      <td>91.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>727</th>\n",
-       "      <td>My First Bricks</td>\n",
-       "      <td>1862.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>728</th>\n",
-       "      <td>Green LEGO® DUPLO® Baseplate</td>\n",
-       "      <td>2704.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>729</th>\n",
-       "      <td>Touch Sensor</td>\n",
-       "      <td>3929.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>730</th>\n",
-       "      <td>Temple of Airjitzu</td>\n",
-       "      <td>2595.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>731</th>\n",
-       "      <td>A-Wing Starfighter™</td>\n",
-       "      <td>2382.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>732</th>\n",
-       "      <td>Power Functions Motor Set</td>\n",
-       "      <td>1151.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>733</th>\n",
-       "      <td>Starter Pack PLAYSTATION® 4</td>\n",
-       "      <td>1327.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>734</th>\n",
-       "      <td>Zane Fun Pack</td>\n",
-       "      <td>1005.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>735</th>\n",
-       "      <td>Portal® 2 Level Pack</td>\n",
-       "      <td>370.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>736</th>\n",
-       "      <td>Wicked Witch™ Fun Pack</td>\n",
-       "      <td>1098.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>737</th>\n",
-       "      <td>Vaiana's Ocean Voyage</td>\n",
-       "      <td>1020.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>738</th>\n",
-       "      <td>Slave I™</td>\n",
-       "      <td>603.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>739</th>\n",
-       "      <td>Moana's Ocean Voyage</td>\n",
-       "      <td>631.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>740</th>\n",
-       "      <td>My First Vehicles</td>\n",
-       "      <td>513.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>741 rows × 2 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                  0  piece_count\n",
-       "0             Bird Island Egg Heist        277.0\n",
-       "1                Piggy Plane Attack        168.0\n",
-       "2                  Piggy Car Escape         74.0\n",
-       "3    United States Capitol Building       1032.0\n",
-       "4     Solomon R. Guggenheim Museum®        744.0\n",
-       "5                          Shanghai        597.0\n",
-       "6                     New York City        598.0\n",
-       "7                 Buckingham Palace        780.0\n",
-       "8                            London        468.0\n",
-       "9                           Chicago        444.0\n",
-       "10                  Arc de Triomphe        386.0\n",
-       "11                 The Eiffel Tower        321.0\n",
-       "12                           Sydney        361.0\n",
-       "13           BOOST Creative Toolbox        847.0\n",
-       "14                      Go Brick Me        708.0\n",
-       "15                      Owen & Blue        234.0\n",
-       "16         Mr. Incredible & Frozone        160.0\n",
-       "17                       Chewbacca™        149.0\n",
-       "18                        Han Solo™        141.0\n",
-       "19                    Iron Man MK50        101.0\n",
-       "20                           Thanos        105.0\n",
-       "21                        Star-Lord        113.0\n",
-       "22                           Gamora        136.0\n",
-       "23                             Finn         91.0\n",
-       "24                  Valentine's Bee        140.0\n",
-       "25                    Wonder Woman™        143.0\n",
-       "26                       The Flash™        122.0\n",
-       "27                        Kylo Ren™        130.0\n",
-       "28                              Rey        119.0\n",
-       "29                         Aquaman™        135.0\n",
-       "..                              ...          ...\n",
-       "711        Catwoman™ Catcycle Chase         83.0\n",
-       "712                    Creative Box        106.0\n",
-       "713            Creative Builder Box        193.0\n",
-       "714                Bricks on a Roll         89.0\n",
-       "715               Vacation Getaways         98.0\n",
-       "716                 Winter Toy Shop         85.0\n",
-       "717    The Ghostbusters™ Level Pack         81.0\n",
-       "718      Adventure Time™ Level Pack        120.0\n",
-       "719         Harry Potter™ Team Pack        112.0\n",
-       "720       Adventure Time™ Team Pack         88.0\n",
-       "721      Excalibur Batman™ Fun Pack        127.0\n",
-       "722                A-Team™ Fun Pack         90.0\n",
-       "723              Sensei Wu Fun Pack         87.0\n",
-       "724                  Bane™ Fun Pack         93.0\n",
-       "725          Knight Rider™ Fun Pack         78.0\n",
-       "726       LEGO® DUPLO® Creative Box         91.0\n",
-       "727                 My First Bricks       1862.0\n",
-       "728    Green LEGO® DUPLO® Baseplate       2704.0\n",
-       "729                    Touch Sensor       3929.0\n",
-       "730              Temple of Airjitzu       2595.0\n",
-       "731             A-Wing Starfighter™       2382.0\n",
-       "732       Power Functions Motor Set       1151.0\n",
-       "733     Starter Pack PLAYSTATION® 4       1327.0\n",
-       "734                   Zane Fun Pack       1005.0\n",
-       "735            Portal® 2 Level Pack        370.0\n",
-       "736          Wicked Witch™ Fun Pack       1098.0\n",
-       "737           Vaiana's Ocean Voyage       1020.0\n",
-       "738                        Slave I™        603.0\n",
-       "739            Moana's Ocean Voyage        631.0\n",
-       "740               My First Vehicles        513.0\n",
-       "\n",
-       "[741 rows x 2 columns]"
+       "301429.0"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1506,7 +1109,7 @@
     "newdf=pd.DataFrame(series)\n",
     "newdf['piece_count']=df.filter(['piece_count'])\n",
     "newdf\n",
-    "sum"
+    "sum(newdf['piece_count'])"
    ]
   },
   {
