Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1121,11 +1121,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list_price            136.2971\n",
+       "num_reviews            38.0000\n",
+       "piece_count          1077.0000\n",
+       "play_star_rating        5.0000\n",
+       "prod_id             75531.0000\n",
+       "star_rating             5.0000\n",
+       "val_star_rating         5.0000\n",
+       "Name: 0.9, dtype: float64"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df.# Your code here"
+    "df.quantile(.9)# Your code here"
    ]
   },
   {
@@ -1145,7 +1163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "df['review_difficulty'].uni# Your code here"
    ]
   },
   {
