Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1159,11 +1159,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Average', 'Easy', 'Challenging', 'Very Easy', nan,\n",
+       "       'Very Challenging'], dtype=object)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df['review_difficulty'].uni# Your code here"
+    "df['review_difficulty'].unique()# Your code here"
    ]
   },
   {
@@ -1175,11 +1187,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Easy                4236\n",
+       "Average             3765\n",
+       "Very Easy           1139\n",
+       "Challenging         1058\n",
+       "Very Challenging       8\n",
+       "Name: review_difficulty, dtype: int64"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "df['review_difficulty'].value_counts()# Your code here"
    ]
   },
   {
