--- a/index.ipynb
+++ b/index.ipynb
@@ -1235,7 +1235,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "string_df = None"
+    "string_df = df.applymap(None"
    ]
   },
   {
